...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="33P-79-nMi" userLabel="Button Like">
                                                    <rect key="frame" x="317" y="4" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like_button_off"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_button_on"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked:" destination="CRo-RH-btr" eventType="touchUpInside" id="Dlv-1h-afn"/>
                                                    </connections>
                                                </button>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Mrv-RN-3qv"/>
                                    <constraint firstAttribute="width" constant="48" id="hDc-qt-Qr8"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
                                <connections>
                                    <action selector="didTapBackButton" destination="XVC-Wd-rLN" eventType="touchUpInside" id="GJU-tB-gFN"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gye-FV-v0H">
                                <rect key="frame" x="162.66666666666666" y="726" width="50" height="50"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cMb-Ci-9up">
                                <rect key="frame" x="16" y="640" width="343" height="48"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Войти"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="MIN-Cw-Z1I"/>
                                </constraints>
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти"/>
...
